ingress-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.com
    http:
      paths:
      - backend:
          serviceName: imooc-prom-prometheus-oper-prometheus
          servicePort: web
        path: /
